--- a/style.css
+++ b/style.css
@@ -14,3 +14,13 @@ html, body {
 canvas {
     display: block;
 }
+
+#cover {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: white;
+    opacity: 1;
+    width: 100%;
+    height: 100vh;
+}
